--- a/src/main/resources/templates/chat.html
+++ b/src/main/resources/templates/chat.html
@@ -41,7 +41,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/stompjs@2.3.3/lib/stomp.min.js"></script>
 
-    <div th:replace="chat/new-chat-modal.html"></div>
+    <div th:replace="~{chat/new-chat-modal.html}"></div>
 
     <!-- Video Call Modal -->
     <div id="video-call-modal" class="fixed inset-0 bg-black bg-opacity-90 flex items-center justify-center z-50 hidden">
