--- a/src/main/resources/templates/gallery.html
+++ b/src/main/resources/templates/gallery.html
@@ -45,39 +45,39 @@
             <div class="mb-6">
                 <nav
                         aria-label="Tabs"
-                        class="bg-gray-800 rounded-lg p-1 flex space-x-1"
+                        class="bg-gray-800 rounded-lg p-1"
                         id="file-tabs"
                 >
+                    <div class="flex w-full">
                     <button
-                            class="file-tab flex-1 text-center whitespace-nowrap py-2 px-4 rounded-md font-medium text-sm text-gray-400 hover:bg-gray-700 hover:text-white"
-                            data-tab="all"
-                    >
-                        All
-                    </button>
-                    <button
-                            class="file-tab flex-1 text-center whitespace-nowrap py-2 px-4 rounded-md font-medium text-sm text-gray-400 hover:bg-gray-700 hover:text-white"
-                            data-tab="documents"
-                    >
-                        Documents
-                    </button>
-                    <button
-                            class="file-tab flex-1 text-center whitespace-nowrap py-2 px-4 rounded-md font-medium text-sm text-gray-400 hover:bg-gray-700 hover:text-white"
-                            data-tab="images"
-                    >
-                        Images
-                    </button>
-                    <button
-                            class="file-tab flex-1 text-center whitespace-nowrap py-2 px-4 rounded-md font-medium text-sm text-gray-400 hover:bg-gray-700 hover:text-white"
-                            data-tab="videos"
-                    >
-                        Videos
-                    </button>
-                    <button
-                            class="file-tab flex-1 text-center whitespace-nowrap py-2 px-4 rounded-md font-medium text-sm text-gray-400 hover:bg-gray-700 hover:text-white"
-                            data-tab="audio"
-                    >
-                        Audio
-                    </button>
+                            class="file-tab flex-1 text-center whitespace-nowrap py-2 px-2 sm:px-4 rounded-md font-medium text-xs sm:text-sm text-gray-400 hover:bg-gray-700 hover:text-white"                                data-tab="all"
+                        >
+                            All
+                        </button>
+                        <button
+                                class="file-tab flex-1 text-center whitespace-nowrap py-2 px-2 sm:px-4 rounded-md font-medium text-xs sm:text-sm text-gray-400 hover:bg-gray-700 hover:text-white"                                data-tab="documents"
+                        >
+                            <span class="hidden sm:inline">Documents</span>
+                            <span class="sm:hidden">Docs</span>
+                        </button>
+                        <button
+                                class="file-tab flex-1 text-center whitespace-nowrap py-2 px-2 sm:px-4 rounded-md font-medium text-xs sm:text-sm text-gray-400 hover:bg-gray-700 hover:text-white"                                data-tab="images"
+                        >
+                            <span class="hidden sm:inline">Images</span>
+                            <span class="sm:hidden">Imgs</span>
+                        </button>
+                        <button
+                                class="file-tab flex-1 text-center whitespace-nowrap py-2 px-2 sm:px-4 rounded-md font-medium text-xs sm:text-sm text-gray-400 hover:bg-gray-700 hover:text-white"                                data-tab="videos"
+                        >
+                            <span class="hidden sm:inline">Videos</span>
+                            <span class="sm:hidden">Vids</span>
+                        </button>
+                        <button
+                                class="file-tab flex-1 text-center whitespace-nowrap py-2 px-2 sm:px-4 rounded-md font-medium text-xs sm:text-sm text-gray-400 hover:bg-gray-700 hover:text-white"                                data-tab="audio"
+                        >
+                            Audio
+                        </button>
+                    </div>
                 </nav>
             </div>
 
@@ -134,6 +134,7 @@
                                 disabled
                         >
                             <span class="material-icons text-sm">chevron_left</span>
+                            Previous
                         </button>
 
                         <div id="pagination-numbers" class="flex items-center space-x-1">
@@ -144,6 +145,7 @@
                                 id="pagination-next"
                                 class="px-3 py-2 text-sm font-medium text-gray-400 bg-gray-800 border border-gray-600 rounded-lg hover:bg-gray-700 hover:text-white disabled:opacity-50 disabled:cursor-not-allowed"
                         >
+                            Next
                             <span class="material-icons text-sm">chevron_right</span>
                         </button>
                     </div>
