--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -18,9 +18,11 @@
             rel="stylesheet"
             crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
 
     <!-- Application CSS -->
     <link th:href="@{/css/app.css}" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 
 <body class="flex h-screen">
@@ -63,6 +65,11 @@
                th:classappend="${currentPath == '/users'} ? ' bg-blue-600'">
                 <span class="material-icons mr-3">group</span>
                 <span>User Management</span>
+            </a>
+            <a class="flex items-center px-4 py-3 text-slate-300 hover:bg-slate-700 rounded-lg" th:href="@{/invoice}"
+               th:classappend="${currentPath == '/invoice'} ? ' bg-blue-600'">
+                <span class="material-icons mr-3">receipt_long</span>
+                <span>Invoices</span>
             </a>
             <a class="flex items-center px-4 py-3 text-slate-300 hover:bg-slate-700 rounded-lg" th:href="@{/chat}"
                th:classappend="${currentPath == '/chat'} ? ' bg-blue-600'">
